Refactor SECRETS-MANAGEMENT.md and add comprehensive security safeguards
- Completely refactored documentation to focus on current implementation
- Added Mermaid diagrams for system architecture and workflows
- Created detailed user workflows with sequence diagrams
- Added comprehensive security safeguards section
- Created GitHub Actions security workflow for automated scanning
- Enhanced .gitignore with specific secret pattern exclusions
- Added setup script for local pre-commit hooks and git safety
- Documented prevention mechanisms for plaintext secret leaks
- Added troubleshooting guides and best practices
- Included migration guides from other secret systems

--- a/.gitignore
+++ b/.gitignore
@@ -21,9 +21,28 @@ Thumbs.db
 # Temp files
 *.log
 *.tmp
-
 *.bak
 *.orig
+
+# Security - Prevent accidental secret commits
+*.dec
+*.decrypted
+*.plaintext
+*.unencrypted
+*.key
+*.pem
+*.p12
+*.pfx
+keys.txt
+*_rsa
+*_dsa
+*_ed25519
+*_ecdsa
+.secrets/
+secrets.json
+secrets.yaml
+!secrets/**/*.yaml  # Allow encrypted secrets in secrets/ directory
+!*.template         # Allow template files
 *.pcap
 *.wsl
 CLAUDE.md
