Implement SSH key management Step 1-2: User existence checking and bootstrap script
Step 1 - SSH Public Keys Registry Module Enhancement:
- Fixed critical bug: Added user existence checking before key distribution
- Prevents evaluation errors when SSH keys are registered for non-existent users
- Added warnings for keys registered to non-existent users
- Module now safely filters to only existing users during auto-distribution

Step 2 - Bootstrap SSH Keys Script Implementation:
- Created comprehensive bootstrap-ssh-keys.sh script with full Bitwarden integration
- Features: Fetch keys from rbw, deploy to ~/.ssh/, generate if missing, store back to BW
- Includes verbose mode, force regeneration, quiet mode, backup handling
- Color-coded output with proper error handling and user feedback
- Fully tested with existing rbw configuration in nixcfg

Updated SECRETS-MANAGEMENT.md roadmap: Phase 1 now 50% complete (Steps 1-2 done)

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,6 @@ CLAUDE.md
 build-profiles/
 .archive/
 claude-runtime/
+
+# Personal migration instructions (contains sensitive information)
+SECRETS-USER-INSTRUCTIONS.md
