--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -1,41 +1,51 @@
 [extend]
-# Ignore sops encrypted files
+# Use default gitleaks rules and extend them
 useDefault = true
 
-# Allowlist for documentation and configuration files
+# Global allowlist for documentation and configuration files
 [allowlist]
 description = "Ignore false positives in documentation and config files"
 paths = [
     '''.*\.md$''',
-    '''modules/.*''',
     '''docs/.*''',
     '''secrets/TEMPLATE-.*''',
     '''secrets/.*INSTRUCTIONS.*''',
     '''.*\.template$''',
 ]
 
+# Specific allowlist for Nix files with SSH configuration patterns
+[[allowlist]]
+description = "Allow SSH configuration values in Nix files"
+regexTarget = "line"
+regexes = [
+    # SSH configuration assertions with literal values
+    '''assertion\s*=.*sshRootLogin.*(no|yes|prohibit-password|forced-commands-only)''',
+    # SSH configuration option comparisons
+    '''sshRootLogin\s*(==|!=)\s*["']?(no|yes|prohibit-password|forced-commands-only)["']?''',
+    # SSH configuration defaults and types
+    '''(default|type)\s*=.*(prohibit-password|forced-commands-only)''',
+    # Documentation mentioning SSH options
+    '''(description|message)\s*=.*prohibit-password''',
+]
+paths = [
+    '''.*\.nix$''',
+]
+
+# Rule for sops encrypted files
 [[rules]]
 description = "Ignore sops encrypted files"
+id = "sops-encrypted-files"
 regex = '''age1[a-z0-9]{58}'''
 path = '''\.sops\.ya?ml$'''
 
+# Rule for age public keys (they're meant to be public)
 [[rules]]
 description = "Ignore age public keys"
+id = "age-public-keys"
 regex = '''age1[a-z0-9]{58}'''
-allowlist.paths = [
+[rules.allowlist]
+paths = [
     '''.sops.yaml''',
-    '''secrets/''',
-]
-
-[[rules]]
-description = "Ignore legitimate password references in configuration"
-regex = '''password.*=.*[^"]'''
-allowlist.paths = [
-    '''modules/base.nix''',
-    '''secrets/SECRETS-MANAGEMENT.md''',
-    '''secrets/TEMPLATE-SECRETS-GUIDE.md''',
-    '''secrets/SECRETS-USER-INSTRUCTIONS.md''',
-    '''docs/''',
-    '''BARE-MOUNT-*.md''',
-    '''OVERSEER-*.md''',
+    '''secrets/.*''',
+    '''.*\.md$''',
 ]
