--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -43,8 +43,10 @@ path = '''\.sops\.ya?ml$'''
 description = "Ignore age public keys"
 id = "age-public-keys"
 regex = '''age1[a-z0-9]{58}'''
-allowlist = { paths = [
+
+[[rules.allowlists]]
+paths = [
     '''.sops.yaml''',
     '''secrets/.*''',
     '''.*\.md$''',
-] }
+]
