fix: simplify gitleaks config and add remaining SOPS exclusions
- Remove problematic gitleaks rule causing TOML parsing error
- Add exclusions for secretsScan, secrets-scan, and secretsManagement patterns
- Simplify configuration to focus on essential security checks

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -111,7 +111,10 @@ jobs:
                       grep -v 'token != null' | \
                       grep -v 'token = mkOption' | \
                       grep -v 'github_token' | \
-                      grep -v 'api_token = {' || true)
+                      grep -v 'api_token = {' | \
+                      grep -v 'secretsScan' | \
+                      grep -v 'secrets-scan' | \
+                      grep -v 'secretsManagement' || true)
             
             if [ -n "$matches" ]; then
               echo "ERROR: Found potential secret matching pattern: $pattern"
