fix: exclude shell scripts and private key processing patterns
- Exclude all .sh files from secret scanning (they contain legitimate patterns)
- Add exclusions for sed commands that process private key patterns
- These are legitimate SSH key management scripts, not actual secrets

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -93,7 +93,7 @@ jobs:
           )
           
           exclude_dirs="--exclude-dir=.git --exclude-dir=result --exclude-dir=.archive --exclude-dir=tests"
-          exclude_files="--exclude=*.md --exclude=*.template --exclude=security.yml"
+          exclude_files="--exclude=*.md --exclude=*.template --exclude=security.yml --exclude=*.sh"
           
           for pattern in "${patterns[@]}"; do
             # Check for matches but exclude legitimate configuration values
@@ -117,7 +117,9 @@ jobs:
                       grep -v 'secretsManagement' | \
                       grep -v 'sops.secrets' | \
                       grep -v 'secretsFile' | \
-                      grep -v '^[[:space:]]*#' || true)
+                      grep -v '^[[:space:]]*#' | \
+                      grep -v 'sed -n.*BEGIN.*PRIVATE KEY' | \
+                      grep -v 'BEGIN.*PRIVATE KEY.*pattern' || true)
             
             if [ -n "$matches" ]; then
               echo "ERROR: Found potential secret matching pattern: $pattern"
