Final SOPS workflow fix: exclude security.yml from self-scan
Prevent the security workflow from flagging its own pattern definitions as potential secrets.

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -114,7 +114,8 @@ jobs:
                       grep -v 'passwordSecret.*=' | \
                       grep -v 'passwords.*=' | \
                       grep -v '/run/secrets\.d/.*/password' | \
-                      grep -v 'tests/.*BEGIN.*PRIVATE KEY' || true)
+                      grep -v 'tests/.*BEGIN.*PRIVATE KEY' | \
+                      grep -v '\.github/workflows/security\.yml:' || true)
             
             if [ -n "$matches" ]; then
               echo "ERROR: Found potential secret matching pattern: $pattern"
