--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -115,7 +115,8 @@ jobs:
                       grep -v 'passwords.*=' | \
                       grep -v '/run/secrets\.d/.*/password' | \
                       grep -v 'tests/.*BEGIN.*PRIVATE KEY' | \
-                      grep -v '\.github/workflows/security\.yml:' || true)
+                      grep -v '\.github/workflows/security\.yml:' | \
+                      grep -v '\.md:.*".*".*=' || true)
             
             if [ -n "$matches" ]; then
               echo "ERROR: Found potential secret matching pattern: $pattern"
