--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -1,16 +1,19 @@
+# Use default gitleaks rules 
 [extend]
-# Ignore sops encrypted files
 useDefault = true
 
-[[rules]]
-description = "Ignore sops encrypted files"
-regex = '''age1[a-z0-9]{58}'''
-path = '''\.sops\.ya?ml$'''
-
-[[rules]]
-description = "Ignore age public keys"
-regex = '''age1[a-z0-9]{58}'''
-allowlist.paths = [
-    '''.sops.yaml''',
-    '''secrets/''',
+# Minimal allowlist - only exclude impossible placeholders and known false positives
+[allowlist]
+description = "Exclude standardized impossible placeholders and legitimate config patterns"
+regexes = [
+    '''<PLACEHOLDER_.*_IMPOSSIBLE>''',
+    '''prohibit-password''',
+    '''forced-commands-only''',
+    '''age1[a-z0-9]{58}''',
+    '''tblack-t14-nixos''',
+]
+paths = [
+    '''.*\.template$''',
+    '''secrets/.*INSTRUCTIONS.*''',
+    '''claude-runtime/.*\.jsonl$''',
 ]
