Improvements to tmux-session-picker and related infrastructure:
- parallel processing, streaming architecture for fast progressive updates
- Implement comprehensive test framework with mock data generation
- Implement autovalidate configuration system for script validation
- Add comprehensive documentation and performance analysis
- UI improvements: horizontal/vertical layout modes and smart abbreviation with middle-truncation
- Consolidate bash utility libraries and migrate to validated-scripts module framework

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ Thumbs.db
 *.tmp
 *.bak
 *.orig
+**/__pycache__/
 
 # Security - Prevent accidental secret commits
 *.dec
@@ -45,7 +46,6 @@ secrets.yaml
 !*.template         # Allow template files
 *.pcap
 *.wsl
-CLAUDE.md
 .claude/
 .serena/
 build-profiles/
