Streamline configuration management structure
Changes:
- Update .gitignore to track only settings.json files for config dirs
- Consolidate CLAUDE.md to essential project rules and fork status
- Remove session-specific NEW_CHAT_PROMPT.md (completed work)
- Add web session configuration support (.claude/settings.json)
- Add Pro account configuration (claude-runtime/.claude-pro/)
- Integrate glow and yazi markdown rendering support
- Update hook definitions from Start to SessionStart
- Add ensure-nix.sh bootstrap script for web environments
- Update tmux and development tool configurations

This reorganization separates durable configuration (checked in) from
ephemeral runtime state (ignored), supporting both local and web-based
Claude Code sessions with unified hooks and settings management.

--- a/.gitignore
+++ b/.gitignore
@@ -46,11 +46,17 @@ secrets.yaml
 !*.template         # Allow template files
 *.pcap
 *.wsl
-.claude/
 .serena/
 build-profiles/
 .archive/
-claude-runtime/
+
+# === Claude Code Configuration ===
+# Ignore all runtime state
+claude-runtime/*/*
+.claude/*         
+# ..but include settings/configuration
+!claude-runtime/*/settings.json
+!.claude/settings.json 
 
 # Personal migration instructions (contains sensitive information)
 SECRETS-USER-INSTRUCTIONS.md
