Remove obsolete slash command directories and update gitignore
- Remove tracked context/ and refactoring/ command directories (12 files)
  - These are now Nix-managed symlinks, don't need git tracking
- Update .gitignore to exclude all command subdirectories
  - Pattern: claude-runtime/.claude-*/commands/*/
  - Prevents accumulation of Nix-managed symlink directories
- Update CLAUDE.md with git worktree workflow documentation
  - Multi-session isolation patterns for Pro/Max parallel work

--- a/.gitignore
+++ b/.gitignore
@@ -86,6 +86,9 @@ claude-runtime/.claude-*/commands/globalmemory.*
 claude-runtime/.claude-*/commands/*remember.*
 claude-runtime/.claude-*/commands/next-task.*
 
+# Nix-managed slash command subdirectories (all symlinks to nix store)
+claude-runtime/.claude-*/commands/*/
+
 # Web session runtime (.claude/ in repo root)
 .claude/*
 !.claude/settings.json
